Bug resolved.  Stretch Goals Started.

--- a/index.css
+++ b/index.css
@@ -1,66 +1,6 @@
-/* CSS reset
-
-If you want to use my reset styles, then feel free! It's all explicitly in the public domain (I have to formally say that or else people ask me about licensing). You can grab a copy of the file to use and tweak as fits you best. If you're more of the copy-and-paste type, or just want an in-page preview of what you'll be getting, here it is.
-
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-/*
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-/*
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-*/
-/*
-Previous Versions
-v1.0 (200802)
-Acknowledgments
-Thanks to Paul Chaplin for the blockquote / q rules.
-*/
 
 /*
-BUG REPORT - When my CSS reset code is live, it overrides and breaks my HTML inline styling <strong>.  I tried to insert alternative CSS reset by Meyer and it broke several other elements in terms of alignment.  So I decided to stick with CSS reset version one (form the Lambda Website) even though it breaks the inline HTML styling for <strong>.
+BUG REPORT - When my CSS reset code is live, it overrides and breaks my HTML inline styling <strong>.  I tried to insert alternative CSS reset by Meyer and it broke several other elements in terms of alignment.  So I decided to stick with CSS reset version one (form the Lambda Website) even though it breaks the inline HTML styling for <strong>. I was able to resolve this issue by commenting out the font property.
 */
 
 
@@ -81,7 +21,7 @@ margin: 0;
 padding: 0;  
 border: 0;  
 font-size: 100%;  
-font: inherit;  
+/* font: inherit;  Must Comment Out to Prevent HTML inline style override. */
 vertical-align: baseline;  
 }
 
@@ -116,6 +56,12 @@ nav ul a {
     display: flex;
     text-align: center;
     margin: 2em 5em;
+}
+
+nav ul a:hover {
+      color: black;
+      transform: scale(1.2);
+      transition: 2s ease;   
 }
 
 /* header banner styling */
